# labelshift

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.py  requirements.txt  setup.cfg
.github/workflows/: build.yml  main.yml  python-package.yml
labelshift/: __init__.py  adjustments.py  api.py  partition.py  probability.py  recalibrate.py  scoring.py  summary_statistic.py  testing.py  timer.py
labelshift/algorithms/: __init__.py  api.py  base.py  bayesian_discrete.py  bbse.py  classify_and_count.py  expectation_maximization.py  gaussian_mixture_model.py  ratio_estimator.py  validate.py
labelshift/calibrate/: __init__.py
labelshift/datasets/: __init__.py  api.py  discrete_categorical.py  gaussian_mixture.py  split.py
labelshift/experiments/: __init__.py  api.py  names.py  timer.py
labelshift/generators/: __init__.py  strict_classifier.py
labelshift/interfaces/: __init__.py  point_estimators.py
qbench/: __init__.py  base.py
qbench/algorithms/: classify_and_count.py
qbench/generators/: __init__.py  strict_classifier.py
quant/algorithms/: __init__.py  base.py
quantipy/: __init__.py  recalibrate.py
quantipy/algorithms/: __init__.py  classify_and_count.py  expectation_maximization.py
scripts/: design_categorical.py  experiment_categorical.py  experiment_external_dataset.py  experiment_external_dataset2.py  experiment_gaussian.py  run_categorical.py
scripts/experiment1/: 1-1.py  1-2.py  1-3.py  plot_figure.py
tests/: conftest.py  test_adjustments.py  test_partition.py  test_probability.py  test_recalibrate.py  test_scoring.py  test_summary_statistic.py  test_timer.py
tests/algorithms/: test_bayesian_discrete.py  test_bbse.py  test_classify_and_count.py  test_expectation_maximization.py  test_ratio_estimator.py
tests/datasets/: test_discrete_categorical.py  test_gaussian_mixture.py  test_split.py
workflows/: benchmark.smk  misspecified.smk  nearly_nonidentifiable.smk  prior_sensitivity.smk  single_cell.smk
