[metadata]
name = labelshift
version = 0.0.1
author = Paweł Czyż
author_email = pczyz@protonmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/labelshift/labelshift
project_urls =
    Bug Tracker = https://github.com/labelshift/labelshift/issues
classifiers =
    Programming Language :: Python :: 3
    License :: BSD-3-Clause
    Operating System :: OS Independent


[options]
packages = labelshift
python_requires = >=3.8
setup_requires =
    setuptools >= 38.3.0
install_requires =
    arviz
    numpy >= 1.12,<2
    petname
    pydantic
    jax
    jaxlib
    joblib
    numpyro
    scikit-learn
    scipy

[options.packages.find]
where = labelshift


[flake8]
max-line-length = 88
max-doc-length = 120
indent-size = 4
exclude =
    .git,
    __pycache__
    local
    private


[pytype]
inputs = labelshift

